# dbt-project-2

./: README.md  import_tables.py  pyproject.toml
bank/: dbt_project.yml
bank/models/: descricao.md  exposures.yml  schemas.yml  sources.yml  stg_accounts.sql  stg_customer.sql  stg_tabela.sql
bank/seeds/: tabela.csv
bank/snapshots/: tabela_snapshot.sql
