[tool.poetry]
name = "dbt-project-2"
version = "0.1.0"
description = ""
authors = ["marcelopborges <54992376+marcelopborges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.7.8"
sqlalchemy = "^2.0.27"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
